# exercises_comp

./: .gitignore  CMakeLists.txt  README.md  bisection.csv  ctn_sqrt.csv  makefile  max_pressure_graph.txt  newton-rapson.csv  results copy.txt  results.txt
bro/: c_cpp_properties.json  launch.json  settings.json  tasks.json
data/: bisection.csv  gamma2.54.csv  gamma4-3.csv  gamma5-3.csv  newton-rapson.csv  rel_gamma2.54.csv  rel_gamma4-3.csv  rel_gamma5-3.csv  results.txt  rm_error_star.csv
py/: main.py
src/: header.h  main.c  main.py
src/approx/: approx.c  approx.h
src/approx/bisection/: bisection.c  bisection.h
src/approx/newrap/: newrap.c  newrap.h
src/diag/: diag.c  diag.h
src/eq_diff/: eq_diff.c  eq_diff.h
src/exercises/ex_02/: ex_02.c  ex_02.h  fconst.h
src/exercises/ex_04/: ex_04.c  ex_04.h
src/exercises/ex_05/: ex_05.c  ex_05.h
src/exercises/ex_06/: central_grav.c  ex_06.c  ex_06.h  reciprocal_grav.c  test_forces.h  zero_force.c
src/g_raph/: g_raph.py
src/integral/: integral.h
src/intt/: intt.c  intt.h
src/intt/simpson/: simpson.c  simpson.h
src/intt/trap/: trap.c  trap.h
src/matr/: matr.c  matr.h
src/mymath/: derivate.c  mymath.c  mymath.h
src/option/: option.c  option.h
src/output/: output.c  output.h
src/rand/: rand.c  rand.h
src/runge_kutta/: runge_kutta.c  runge_kutta.h  star_ex.h
src/simpson/: simpson.h
src/trap/: trap.h
src/vec/: test.h  vec.c  vec.h  vec_print.c
src/vel-ver/: part_sim.c  part_thread.c  vel-ver.c  vel-ver.h
src/wave_func/: wave_func.c  wave_func.h
test/: test_output.c  test_vec.c
